W&W BIP discussion, including in eval.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -487,7 +487,7 @@ In this categorisation system, one could consider the log data recorded by the M
 
 Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a PR scenario within the same framework, sensory input from a RW environment that features high spatial equivalence and a mutual vantage point with the VR environment is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, incompatible with and suppressing the model of their RW surroundings, PR systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to it and can be attended to in tandem.
 
-This distinction is perhaps best explained as a difference in the use of the term `presence', \textit{``which is often used to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}, which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention. Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this investigation needed to issue a questionnaire to gain insight into the balance between presence (whether real or virtual) and absence.
+This distinction is perhaps best explained as a difference in the use of the term `presence', \textit{``which is often used to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}, which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis, with a break in presence considered under the original Slater and Steed definition (see discussion in section \ref{transitions_in_parallel_reality}) of a shift upon the locus of attention axis from VR to RW. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the second of Waterworth and Waterworth's definitions (again, see discussion in section \ref{transitions_in_parallel_reality}) as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention. Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this investigation needed to issue a questionnaire to gain insight into the balance between presence (whether real or virtual) and absence.
 
 Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a PR scenario. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is likely beneficial, rather than detrimental, to the overall experience.
 
