New chapter heading style.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -504,7 +504,7 @@ In this model, the notion of \textit{involvement} relates closely to the \textit
 %=========================================================================================================
 
 \subsection{The Combined Milgram/Waterworth Model}
-
+\label{combined-milgram-waterworth-model}
 With the locus of attention axis representing the environment from which the stimuli the user is perceiving originate from, a relationship can be drawn between the Waterworth model and Milgram and Kishino's reality-virtuality continuum, with the latter considered here to be analogous to the locus of attention axis. The combination of these two models in this manner gives rise to the combined Milgram/Waterworth model which is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum} and allows for a novel method of visualising the experience of using alternate reality systems, including parallel reality ones.
 
 \begin{figure}[h]
