--- a/thesis.tex
+++ b/thesis.tex
@@ -79,6 +79,10 @@
 
 \renewcommand{\chaptername}{}
 
+\usepackage{titlesec}
+\titleformat{\chapter}[hang] 
+{\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{1em}{} 
+
 % Renders two images side-by-side & scales them so height is identical
 %
 %\TwoFig{} {} {}
