Substitutional reality added into discussion of spatial equivalence.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -419,7 +419,7 @@ This distinction depends partly upon whether one adopts a dualistic concept of v
 
 %=========================================================================================================
 
-However one treats virtual space, a PR system would be unrewarding if the real and virtual environments were identical\turklevrfootnote{}. However a virtual environment that shares roughly the same fundamental dimensions and layout as the real environment (representing the same `place') but presents an \textit{alternative} representation of it has been proven to be a useful modality in previous XR research (see section \ref{sec_crossreality}) and it is this arrangement that this thesis explores, in particular where the virtual environment represents the same place as the real environment but at an earlier moment in time.
+However one treats virtual space, a PR system would be unrewarding if the real and virtual environments were identical\turklevrfootnote{}. However a virtual environment that shares roughly the same fundamental dimensions and layout as the real environment (representing the same `place') but presents an \textit{alternative} representation of it has been proven to be a useful modality in previous XR research (see section \ref{sec_crossreality}) and it is this arrangement that this thesis explores, in particular where the virtual environment represents the same place as the real environment but at an earlier moment in time. This concept of spatially equivalent VR and RW environments has recently been explored under the name of `substitutional reality'~\cite{Simeone2015}, but without the intention of being able to switch between the two environments.
 
 One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. The combination of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth), Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world~\cite{Roush2007}. The PR platforms developed in this thesis focus on individual locations, however it does not take a great leap of the imagination to comprehend the worth of such a system scaled to a larger, even global, size.
 
