--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,8 @@
 \documentclass[a4paper]{report}
 
+%make table of contents clickable in the pdf
+\usepackage{hyperref}
+
 %university regulations(?)
 \usepackage[margin=3cm]{geometry}
 
@@ -80,8 +83,8 @@
 \renewcommand{\chaptername}{}
 
 \usepackage{titlesec}
-\titleformat{\chapter}[hang] 
-{\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{1em}{} 
+\titleformat{\chapter}[hang]
+{\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{1em}{}
 
 % Renders two images side-by-side & scales them so height is identical
 %
