Standards in Cross Reality.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -232,7 +232,7 @@ Modulated Reality & Platforms that aim to modify the user's view, by multiplicat
 
 %=========================================================================================================
 
-\section{A New Category of Alternate Reality}
+\section{Introducing a New Alternate Reality}
 
 With a sound understanding of the ecosystem of alternate realities provided by the preceding section, parallel reality can now be introduced and situated accordingly. In order to do so, it is necessary to introduce one additional category of alternate reality that - cross reality. This is a more recent addition to the field of alternate realities than more familiar categories such as augmented reality, with its roots in the mid to late 2000s, however as one of its fundamental aspects is shared with parallel reality its inclusion in this discussion is required.
 
@@ -276,7 +276,7 @@ Which the Shadow Lab addressed via the sensor/actuator infrastructure to more cl
 	\textit{``One of the main problems with \ldots\ virtual reality is what to do about the body that is left behind in physical reality \ldots\ In HyperReality a person by definition is perceptually aware of the physical world around them, yet part of the attention normally given to the physical reality is given to interacting with virtual reality. It is difficult as yet to see how much this matters, but the increasing use of the mobile phone, which is a primitive form of HR, gives us some feel for the issues. People using a mobile phone can walk busy streets \ldots\ while talking to someone who is not there.''}~\cite{Terashima2001}
 \end{quote}
 
-\textbf{***Briefly mention standards, mainly ISO/IEC 23005 (MPEG-V)}
+A potential source of standardization for the implementation of cross reality systems such as these that leveraged virtual world technology such as Second Life was presented by ISO/IEC 23005 (also referred to as MPEG-V), whose creation aimed to \textit{``enable the interoperability between virtual worlds \ldots\ and with the real world''} including through the use of \textit{``sensors, actuators, vision and rendering''}~\cite{InternationalOrganizationforStandardization2011}.
 
 %=========================================================================================================
 
